<resources>
    <string name="app_name">SQLiteThree</string>
    <string name="add_course">Add Course</string>
    <string name="enter_course_description">Enter Course Description</string>
    <string name="enter_course_tracks">Enter Course Tracks</string>
    <string name="enter_course_duration">Enter Course Duration</string>
    <string name="enter_course_name">Enter course Name</string>
    <string name="read_all_courses">Read All Courses</string>
    <string name="description">Description</string>
    <string name="duration">Duration</string>
    <string name="course_tracks">Course Tracks</string>
    <string name="course_name">Course Name</string>
    <string name="add">Add</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="admindashboard">AdminDashboard</string>
    <string name="studentdasgboard">studentDasgboard</string>
    <string name="student_management">Student Management</string>
    <string name="show">Show</string>
    <string name="view_all">View all</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="enter_marks">Enter Marks</string>
    <string name="enter_your_name">Enter Students Name</string>
    <string name="enter_roll_no">Enter Roll No.</string>
    <string name="action_settings">Action Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag">Tag</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="swipe_left_for_register">Swipe Left For Registration</string>
    <string name="swipe_right_for_login">Swipe Right For Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re Enter Password</string>
    <string name="your_name">Enter Name</string>
    <string name="admindasboard">AdminDasboard</string>
    <string name="regno">RegNo</string>
</resources>