<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#01315a"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admindasboard"
        android:layout_margin="20dp"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/roll_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_roll_no"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_your_name" />

    <EditText
        android:id="@+id/marks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_marks"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp" >

        <Button
            android:id="@+id/addbtn"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/deletebtn"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:text="@string/delete" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="98dp" >

        <Button
            android:id="@+id/modifybtn"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:text="@string/modify" />

        <Button
            android:id="@+id/viewbtn"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:text="View" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.74" >

        <Button
            android:id="@+id/viewallbtn"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:text="@string/view_all" />

        <Button
            android:id="@+id/showbtn"
            android:layout_width="140dp"
            android:layout_height="90dp"
            android:text="@string/show" />

    </LinearLayout>

</LinearLayout>